trunk/Archive2/c5/90c190ef192764/output
main.cpp:1:1: error: 'id' does not name a type
 id = murasama_rc990_03_q
 ^
main.cpp:19:1: error: 'brake' does not name a type
 brake
 ^
